--- a/MRM/Views/MasterCampaign/CampaignList.cshtml
+++ b/MRM/Views/MasterCampaign/CampaignList.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Master Campaining List";
 }
 
-<script src="~/Scripts/Configuration.js"></script>
+@*<script src="~/Scripts/Configuration.js"></script>*@
 <script src="~/Scripts/CampaignList.js"></script>
 <!DOCTYPE html>
 <html>
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row">
             <fieldset>
-                <legend>Master Campaign Details</legend>
+                <legend class="header-color">Master Campaign Details</legend>
                 <div class="table-responsive">
                     <table id="masterCampaignGrid" class="display compact table table-striped table-bordered table-hover dataTable" style="font-size:inherit;" role="grid"></table>
                 </div>
