--- a/MRM/Views/Shared/_LoginPartial.cshtml
+++ b/MRM/Views/Shared/_LoginPartial.cshtml
@@ -15,6 +15,6 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Sign in", "SignIn", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li>@Html.ActionLink("Sign in", "SignIn", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class="btnSignIn"})</li>
     </ul>
 }
