--- a/MRM/Views/TacticCampaign/TacticCampaignList.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignList.cshtml
@@ -3,8 +3,6 @@
     ViewBag.Title = "Tactic Campaining List";
 }
 
-
-<script src="~/Scripts/Configuration.js"></script>
 <script src="~/Scripts/TacticCampaignList.js"></script>
 <!DOCTYPE html>
 <html>
@@ -15,7 +13,7 @@
     <div class="container-fluid">
         <div class="row">
             <fieldset>
-                <legend>Tactic Campaign Details</legend>
+                <legend class="header-color">Tactic Campaign Details</legend>
                 <div class="table-responsive">
                     <table id="tacticCampaignGrid" class="display compact table table-striped table-bordered table-hover dataTable" style="font-size:inherit;" role="grid"></table>
                 </div>
