--- a/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
@@ -1,5 +1,7 @@
 ﻿@model MRM.ViewModel.MasterCampaignViewModel
 
+    
+
 <form id="frmMasterCampaign">
     @Html.HiddenFor(m => m.Id, new { @Value = Model.Id })
     @Html.HiddenFor(m => m.Status, new { @Value = Model.Status })
@@ -15,7 +17,7 @@
 
                 <fieldset>
 
-                    <legend>Master Campaign<span class="text-danger" style="float:right;font-size:x-small">Note: Mandatory fields is marked with red aestric (*)</span></legend>
+                    <legend class="header-color">Master Campaign<span class="text-danger" style="float:right;font-size:x-small">Note: Mandatory fields is marked with red aestric (*)</span></legend>
 
                     <div class="row">
                         <div class="col-md-6">
@@ -184,7 +186,7 @@
                             @if (Model.Id != 0 && Model.Status == "Save Draft")
                             {
                                 <div class="col-md-3">
-                                    <input type="button" Id="btnDelete" name="button" value="Delete Draft" class="btn btn-primary col-sm-12" onclick="return confirm('Are you sure you want to delete?')" />
+                                    <input type="button" Id="btnDelete" name="button" value="Delete Draft" class="btn btn-primary col-sm-12" />
                                 </div>
                             }
                             @if (Model.Status != "Complete")
