--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - MRM Campaign</title>
+    <title>@ViewBag.Title - Nokia Campaign</title>
     
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
@@ -19,6 +19,7 @@
     <link href="~/Content/MasterStyle.css" rel="stylesheet"/>
     
     <link href="~/Content/jquery-ui-1.12.1/jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet" />
+    <script src="~/Scripts/Configuration.js"></script>
         
     @*<script src="~/Scripts/jquery-2.1.3.min.js"></script>
     <script src="~/Content/jquery-ui-1.12.1/jquery-ui-1.12.1/jquery-ui.min.js"></script>*@
@@ -33,7 +34,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <h1 style="color:#fff"><a href="/MasterCampaign/Index" style="color:#fff; text-decoration:none" >MRM</a></h1>
+                @*<h1 style="color:#fff"><a href="/MasterCampaign/Index" style="color:#fff; text-decoration:none";>MRM</a></h1>*@
+               <a href="/MasterCampaign/Index"> <img id="logo" src="~/Content/Image/nokia_white_logo.png" alt="Nokia logo" /></a>
+
             </div>
             <div class="navbar-collapse collapse">
                 @Html.Partial("_LoginPartial")
@@ -44,7 +47,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - MRM Campaign</p>
+            <p class="footer-color">&copy; @DateTime.Now.Year Nokia</p>
         </footer>
     </div>
 
@@ -165,7 +168,6 @@
 
 
         if ($("#EndDate").val() != undefined) {
-            debugger 
             if ($("#EndDate").val().length > 0) {
                 if ($("#EndDate").val().indexOf(" ") > 0)
                     $("#EndDate").val($("#EndDate").val().substr(0, $("#EndDate").val().indexOf(" ")));
@@ -230,6 +232,8 @@
     }
 </script>
 <style>
+   
+
     /*.ui-widget-content{border:0px solid #fff !important}*/
      .dialogbg {
          background: transparent;
