--- a/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
@@ -16,7 +16,7 @@
             <div class="box-body">
                 <div class="row">
                     <fieldset>
-                        <legend>Tactic<span class="text-danger" style="float:right;font-size:x-small">Note: Mandatory fields is marked with red aestric (*)</span></legend>
+                        <legend class="header-color">Tactic<span class="text-danger" style="float:right;font-size:x-small">Note: Mandatory fields is marked with red aestric (*)</span></legend>
 
                         <div class="row">
                             <div class="col-md-6">
@@ -291,7 +291,7 @@
                                 @if (Model.Id != 0 && Model.Status == "Save Draft")
                                 {
                                     <div class="col-md-3">
-                                        <input type="button" Id="btnDeleteTactic" name="button" value="Delete Draft" class="btn btn-primary col-sm-12" onclick="return confirm('Are you sure you want to delete?')" />
+                                        <input type="button" Id="btnDeleteTactic" name="button" value="Delete Draft" class="btn btn-primary col-sm-12" />
                                     </div>
                                 } 
                                 @if (Model.Status != "Complete")
