--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -1,28 +1,208 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    
-    <meta charset="utf-8"/>
+
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - MRM Campaign</title>
-    
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.js"></script>
+    <script>
+
+        $(document).ajaxStart(function () {
+            $("<div id='globalLoader' style='width: 200px; height: 400px;'><div class='loader'></div></div>").dialog({ height: 400, width: 400, modal: true, dialogClass: 'dialogbg' }).show();
+            $(".ui-dialog-titlebar").hide();
+        });
+
+        $(document).ajaxComplete(function () {
+            customCode();
+        });
+
+        var customCode = function () {
+            var config = {
+                '.chosen-select': {},
+                '.chosen-select-deselect': { allow_single_deselect: true },
+                '.chosen-select-no-single': { disable_search_threshold: 10 },
+                '.chosen-select-no-results': { no_results_text: 'Oops, nothing found!' },
+                '.chosen-select-rtl': { rtl: true },
+                '.chosen-select-width': { width: '95%' }
+            }
+            for (var selector in config) {
+                $(selector).chosen(config[selector]);
+            }
+
+            commonUiInitialization();
+            $('#globalLoader').remove();
+            GetBGandSegmentSingleDDl();
+        };
+
+        $(document).ready(function () {
+            //$.fn.ajaxMRM = function (options) {
+            //    var settingsmrm = $.extend(true, {}, options,{
+            //        success: function (data) {
+            //            options.success(data);
+            //            customCode();
+            //        }
+            //    });
+
+            //    $.ajax(settingsmrm);
+            //};
+
+            commonUiInitialization();
+            GetBGandSegmentSingleDDl();
+
+            $(document).on("change", "#CampaignTypes", function () {
+                GetBGandSegmentSingleDDl();
+                chosenclear();
+            });
+        });
+
+        function GetBGandSegmentSingleDDl() {
+            var $select = $('#BusinessGroups_Id');
+            var $selectSegment = $('#Segments_Id');
+            if ($('#CampaignTypes').val() == 0) {
+                $select.chosen('destroy');
+                $select.removeAttr('multiple');
+                $select.chosen();
+
+                $selectSegment.chosen('destroy');
+                $selectSegment.attr('multiple', 'multiple');
+                $selectSegment.chosen();
+            }
+            else if ($('#CampaignTypes').val() == 1) {
+                $selectSegment.chosen('destroy');
+                $selectSegment.removeAttr('multiple');
+                $selectSegment.chosen();
+
+                $select.chosen('destroy');
+                $select.attr('multiple', 'multiple');
+                $select.chosen();
+            }
+        }
+
+        function chosenclear() {
+            var $select = $('#BusinessGroups_Id');
+            var $selectSegment = $('#Segments_Id');
+
+            if ($('#CampaignTypes').val() == 0) {
+                $selectSegment.prop('selected', false);
+                $selectSegment.val('');
+                $selectSegment.trigger('chosen:updated');
+
+            }
+            else if ($('#CampaignTypes').val() == 1) {
+                $select.prop('selected', false);
+                $select.val('');
+                $select.trigger('chosen:updated');
+            }
+
+        }
+
+        var manageStartEndDate = function () {
+            var sDate = new Date($('#StartDate').val());
+            var dDate = new Date($('#EndDate').val());
+            if (sDate > dDate) {
+                $("#EndDate").val("");
+            }
+
+            if ($('#StartDate').val() === "") {
+                $("#dvEndDate").datepicker().attr('readonly', 'readonly');
+                $("#dvEndDate").datepicker('remove');
+                $("#EndDate").datepicker().attr('readonly', 'readonly');
+                $("#EndDate").datepicker('remove');
+                $("#EndDate").val("");
+            } else {
+                $("#dvEndDate").datepicker().removeAttr('readonly');
+                $("#dvEndDate").datepicker('remove');
+                $("#EndDate").datepicker().removeAttr('readonly');
+                $("#EndDate").datepicker('remove');
+                $("#dvEndDate").datepicker({
+                    format: 'mm/dd/yyyy',
+                    startDate: new Date($('#StartDate').val()),
+                    formatDate: 'mm/dd/yyyy'
+                });
+            }
+
+
+            if ($("#EndDate").val() != undefined) {
+                if ($("#EndDate").val().length > 0) {
+                    if ($("#EndDate").val().indexOf(" ") > 0)
+                        $("#EndDate").val($("#EndDate").val().substr(0, $("#EndDate").val().indexOf(" ")));
+                }
+
+                if ($("#StartDate").val().length > 0) {
+                    if ($("#StartDate").val().indexOf(" ") > 0)
+                        $("#StartDate").val($("#StartDate").val().substr(0, $("#StartDate").val().indexOf(" ")));
+                }
+            }
+
+
+            //Date selected value highlighted
+            var selectedenddate = $("#EndDate").val();
+            if ($("#EndDate").val() !== "") {
+                $('#dvEndDate').datepicker('update', selectedenddate);
+                $('#EndDate').datepicker('update', selectedenddate);
+            }
+
+        };
+
+
+        var commonUiInitialization = function () {
+
+            $('select.chosen-single').chosen();
+            $('.mrm-cal').datepicker({
+                format: 'mm/dd/yyyy'
+
+            });
+            $('.mrm-cal').each(function () { if ($(this).val().indexOf('1/1/0001') >= 0) { $(this).val(''); } });
+
+
+            manageStartEndDate();
+
+
+            $(document).on('change', '#StartDate', function () {
+                manageStartEndDate();
+
+            });
+        };
+
+        //Date selected value highlighted
+        function HighlightSelectedDate() {
+            var selectedstartdate = $("#StartDate").val();
+            if ($("#StartDate").val() !== "") {
+                $('#dvStartDate').datepicker('update', selectedstartdate);
+                $('#StartDate').datepicker('update', selectedstartdate);
+            }
+        }
+
+        function DDLSelectUnselect(thisOpt) {
+            if ($(thisOpt).val() == null) {
+                var getselectedval = $(thisOpt).closest('.form-group').find('a[data-select-all="selectunselect"]');
+                var selectallElement = getselectedval.attr('data-target-id');
+                var nextStage = getselectedval.attr('data-next-stage');
+                $('#' + selectallElement + ' option').prop('selected', false);
+                getselectedval.attr('data-next-stage', "select");
+                getselectedval.text("Select All");
+                $('#' + selectallElement).trigger('chosen:updated');
+            }
+        }
+    </script>
     <script type="text/javascript" src="https://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
-    
-    <link href="~/Content/datepicker3.css" rel="stylesheet"/>
+
+    <link href="~/Content/datepicker3.css" rel="stylesheet" />
     <script src="~/Content/bootstrap-datepicker.js"></script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @*@Scripts.Render("~/bundles/jquery")*@
-    <link href="~/Content/Multi-Select/docsupport/prism.css" rel="stylesheet"/>
-    <link href="~/Content/Multi-Select/chosen.css" rel="stylesheet"/>
-    <link href="~/Content/MasterStyle.css" rel="stylesheet"/>
-    
+    <link href="~/Content/Multi-Select/docsupport/prism.css" rel="stylesheet" />
+    <link href="~/Content/Multi-Select/chosen.css" rel="stylesheet" />
+    <link href="~/Content/MasterStyle.css" rel="stylesheet" />
+
     <link href="~/Content/jquery-ui-1.12.1/jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet" />
-        
+
     @*<script src="~/Scripts/jquery-2.1.3.min.js"></script>
-    <script src="~/Content/jquery-ui-1.12.1/jquery-ui-1.12.1/jquery-ui.min.js"></script>*@
-   
+        <script src="~/Content/jquery-ui-1.12.1/jquery-ui-1.12.1/jquery-ui.min.js"></script>*@
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -33,7 +213,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <h1 style="color:#fff"><a href="/MasterCampaign/Index" style="color:#fff; text-decoration:none" >MRM</a></h1>
+                <h1 style="color:#fff"><a href="/MasterCampaign/Index" style="color:#fff; text-decoration:none">MRM</a></h1>
             </div>
             <div class="navbar-collapse collapse">
                 @Html.Partial("_LoginPartial")
@@ -48,10 +228,10 @@
         </footer>
     </div>
 
-    
+
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-    
+
 
 
 </body>
@@ -60,180 +240,15 @@
 <script src="~/Content/Multi-Select/docsupport/init.js"></script>
 
 
-<script>
-    
-    $(document).ajaxStart(function() {
-        $("<div id='globalLoader' style='width: 200px; height: 400px;'><div class='loader'></div></div>").dialog({ height: 400, width: 400, modal: true,  dialogClass: 'dialogbg' }).show();
-        $(".ui-dialog-titlebar").hide();
-    });
 
-    $(document).ajaxComplete(function() {
-        var config = {
-            '.chosen-select': {},
-            '.chosen-select-deselect': { allow_single_deselect: true },
-            '.chosen-select-no-single': { disable_search_threshold: 10 },
-            '.chosen-select-no-results': { no_results_text: 'Oops, nothing found!' },
-            '.chosen-select-rtl': { rtl: true },
-            '.chosen-select-width': { width: '95%' }
-        }
-        for(var selector in config) {
-            $(selector).chosen(config[selector]);
-        }
-
-        commonUiInitialization();
-        $('#globalLoader').remove();
-        GetBGandSegmentSingleDDl();
-    });
-
-    $(document).ready(function () {
-        commonUiInitialization();
-        GetBGandSegmentSingleDDl();
-
-        $(document).on("change", "#CampaignTypes", function () {
-            GetBGandSegmentSingleDDl();
-            chosenclear();
-        });
-    });
-
-    function GetBGandSegmentSingleDDl() {
-        var $select = $('#BusinessGroups_Id');
-        var $selectSegment = $('#Segments_Id');
-        if ($('#CampaignTypes').val() == 0) {
-            $select.chosen('destroy');
-            $select.removeAttr('multiple');
-            $select.chosen();
-
-            $selectSegment.chosen('destroy');
-            $selectSegment.attr('multiple', 'multiple');
-            $selectSegment.chosen();
-        }
-        else if ($('#CampaignTypes').val() == 1){
-            $selectSegment.chosen('destroy');
-            $selectSegment.removeAttr('multiple');
-            $selectSegment.chosen();
-
-            $select.chosen('destroy');
-            $select.attr('multiple', 'multiple');
-            $select.chosen();
-        }
-    }
-
-    function chosenclear() {
-        var $select = $('#BusinessGroups_Id');
-        var $selectSegment = $('#Segments_Id');
-
-        if ($('#CampaignTypes').val() == 0)
-        {
-            $selectSegment.prop('selected', false);
-            $selectSegment.val('');
-            $selectSegment.trigger('chosen:updated');
-             
-        }
-        else if ($('#CampaignTypes').val() == 1) {
-            $select.prop('selected', false);
-            $select.val('');
-            $select.trigger('chosen:updated');
-        }
-
-    }
-
-    var manageStartEndDate = function () {
-        var sDate = new Date($('#StartDate').val());
-        var dDate = new Date($('#EndDate').val());
-        if (sDate>dDate) {
-            $("#EndDate").val("");
-        }
-
-        if ($('#StartDate').val() === "") {
-            $("#dvEndDate").datepicker().attr('readonly', 'readonly');
-            $("#dvEndDate").datepicker('remove');
-            $("#EndDate").datepicker().attr('readonly', 'readonly');
-            $("#EndDate").datepicker('remove');
-            $("#EndDate").val("");
-        } else {
-            $("#dvEndDate").datepicker().removeAttr('readonly');
-            $("#dvEndDate").datepicker('remove');
-            $("#EndDate").datepicker().removeAttr('readonly');
-            $("#EndDate").datepicker('remove');
-            $("#dvEndDate").datepicker({
-                format: 'mm/dd/yyyy',
-                startDate: new Date($('#StartDate').val()),
-                formatDate: 'mm/dd/yyyy'
-            });
-        }
-
-
-        if ($("#EndDate").val() != undefined) {
-            if ($("#EndDate").val().length > 0) {
-                if ($("#EndDate").val().indexOf(" ") > 0)
-                    $("#EndDate").val($("#EndDate").val().substr(0, $("#EndDate").val().indexOf(" ")));
-            }
-
-            if ($("#StartDate").val().length > 0) {
-                if ($("#StartDate").val().indexOf(" ") > 0)
-                    $("#StartDate").val($("#StartDate").val().substr(0, $("#StartDate").val().indexOf(" ")));
-            }
-        }
-
-
-        //Date selected value highlighted
-        var selectedenddate = $("#EndDate").val();
-        if ($("#EndDate").val() !== "") {
-            $('#dvEndDate').datepicker('update', selectedenddate);
-            $('#EndDate').datepicker('update', selectedenddate);
-        }
-
-    };
-
-
-    var commonUiInitialization = function () {
-        
-        $('.chosen-single').chosen();
-        $('.mrm-cal').datepicker({
-            format: 'mm/dd/yyyy'
-           
-        });
-        $('.mrm-cal').each(function () { if ($(this).val().indexOf('1/1/0001') >= 0) { $(this).val(''); } });
-
-
-        manageStartEndDate();
-
-
-        $(document).on('change', '#StartDate', function () {
-            manageStartEndDate();
-
-        });
-    };
-
-    //Date selected value highlighted
-    function HighlightSelectedDate() {
-        var selectedstartdate = $("#StartDate").val();
-        if ($("#StartDate").val() !== "") {
-            $('#dvStartDate').datepicker('update', selectedstartdate);
-            $('#StartDate').datepicker('update', selectedstartdate);
-        }
-    }
-
-    function DDLSelectUnselect(thisOpt) {
-        if ($(thisOpt).val() == null)
-        {
-            var getselectedval = $(thisOpt).closest('.form-group').find('a[data-select-all="selectunselect"]');
-            var selectallElement = getselectedval.attr('data-target-id');
-            var nextStage = getselectedval.attr('data-next-stage');
-            $('#' + selectallElement + ' option').prop('selected', false);
-            getselectedval.attr('data-next-stage', "select");
-            getselectedval.text("Select All");
-            $('#' + selectallElement).trigger('chosen:updated');
-        }
-    }
-</script>
 <style>
     /*.ui-widget-content{border:0px solid #fff !important}*/
-     .dialogbg {
-         background: transparent;
-         border: 0px solid #fff !important;
-         border-style: none;
-     }
+    .dialogbg {
+        background: transparent;
+        border: 0px solid #fff !important;
+        border-style: none;
+    }
+
     .loader {
         border: 16px solid #f3f3f3;
         border-radius: 50%;
@@ -245,12 +260,22 @@
     }
 
     @@-webkit-keyframes spin {
-        0% { -webkit-transform: rotate(0deg); }
-        100% { -webkit-transform: rotate(360deg); }
+        0% {
+            -webkit-transform: rotate(0deg);
+        }
+
+        100% {
+            -webkit-transform: rotate(360deg);
+        }
     }
 
     @@keyframes spin {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
+        0% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(360deg);
+        }
     }
 </style>
