tactic form validation

--- a/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
@@ -273,6 +273,8 @@
                                                         {
                                                             <input type="button" id="btnRemoveReachRow" class="btn btn-white removeRow" title="Remove Row" value="Remove" disabled="@(Model.Status == "Complete" ? true : false)" />
                                                         }
+
+                                                        <span class="validmsgReachMetric"></span>
                                                     </td>
 
                                                 </tr>
@@ -318,6 +320,8 @@
                                                         {
                                                             <input type="button" id="btnRemoveResponseRow" class="btn btn-white removeRow" title="Remove Row" value="Remove" disabled="@(Model.Status == "Complete" ? true : false)"/>
                                                         }
+
+                                                        <span class="validmsgResponseMetric"></span>
                                                     </td>
 
                                                 </tr>
