--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 
     <link href="~/Content/jquery-ui-1.12.1/jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet" />
     <script src="~/Scripts/Configuration.js"></script>
-   
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -51,13 +51,9 @@
 
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-
-
-
 </body>
 </html>
-<script>
-
+<script type="text/javascript">
     $(document).ajaxStart(function () {
         $("<div id='globalLoader' style='width: 200px; height: 400px;'><div class='loader'></div></div>").dialog({ height: 400, width: 400, modal: true, dialogClass: 'dialogbg' }).show();
         $(".ui-dialog-titlebar").hide();
@@ -192,14 +188,12 @@
             }
         }
 
-
         //Date selected value highlighted
         var selectedenddate = $("#EndDate").val();
         if ($("#EndDate").val() !== "") {
             $('#dvEndDate').datepicker('update', selectedenddate);
             $('#EndDate').datepicker('update', selectedenddate);
         }
-
     };
 
 
@@ -212,12 +206,10 @@
         });
         $('.mrm-cal').each(function () { if ($(this).val().indexOf('1/1/0001') >= 0) { $(this).val(''); } });
 
-
         manageStartEndDate();
         HighlightSelectedDate();
         $(document).on('change', '#StartDate', function () {
             manageStartEndDate();
-
         });
     };
 
@@ -246,7 +238,7 @@
 <script src="~/Content/Multi-Select/chosen.jquery.js" type="text/javascript"></script>
 <script src="~/Content/Multi-Select/docsupport/init.js"></script>
 
-<style>
+<style type="text/css">
     /*.ui-widget-content{border:0px solid #fff !important}*/
     .dialogbg {
         background: transparent;
