update validation for industry

--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -116,6 +116,7 @@
 
             $('a[data-target-id="BusinessGroups_Id"]').hide();
             $('a[data-target-id="Segments_Id"]').show();
+            $('.validmsgbusinesIndustry').hide();
         }
         else if ($('#CampaignTypes').val() == 1) {
             $selectSegment.chosen('destroy');
