--- a/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
@@ -71,7 +71,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label>Geography</label><span class="text-danger">*</span><br />
+                                    <label>Markets</label><span class="text-danger">*</span><br />
                                     @Html.ListBoxFor(m => m.Geographys_Id, new MultiSelectList(Model.GeographyViewModels, "Id", "Name", Model.Geographys_Id), (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
                                         (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" }) 
@@ -123,7 +123,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label>Campaign Type<span class="text-danger">*</span></label><br />
+                                    <label>Campaign Lead<span class="text-danger">*</span></label><br />
                                     @Html.EnumDropDownListFor(m=>m.CampaignTypes,(Model.Id != 0 && Model.Status == "Complete") ?
                                         (object)new { disabled = "disabled", @class = "chosen-single form-control" } :
                                         (object)new { @class = "chosen-single form-control"} )
@@ -277,7 +277,17 @@
                                 </table>
                             </div>
                         </div>
-                       
+                    <div class="row">
+                        <div class="col-md-6">
+                             
+                        </div>
+                        <div class="col-md-6" style="text-align: right">
+                            @Model.StatusInheritaceStamp
+                        </div>
+                    </div>
+                        
+                        
+                  
                     </fieldset>
 
                 <fieldset>                   
