--- a/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
@@ -37,7 +37,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label>Master Campaign Description<span class="text-danger">*</span></label>
+                                <label>Master Campaign Description & Goals<span class="text-danger">*</span></label>
                                 @Html.TextAreaFor(m => m.CampaignDescription, (Model.Id != 0 && Model.Status == "Complete") ?
                                     (object)new { disabled = "disabled", @class = "form-control" } :
                                     (object)new { @class = "form-control", @maxlength = "500", onkeypress = "return alpha(event)" })
