bug fixed for goal value

--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -270,21 +270,21 @@
 <style type="text/css">
     @@font-face {
     font-family: "Nokia";
-    src: url("fonts/Roboto-Regular.ttf");
+    src: url("../../fonts/Roboto-Regular.ttf");
     }
     @@font-face {
         font-family: "Nokia";
-        src: url("fonts/Roboto-Bold.ttf");
+        src: url("../../fonts/Roboto-Bold.ttf");
         font-weight: bold;
     }
     @@font-face {
         font-family: "Nokia";
-        src: url("fonts/Roboto-Italic.ttf");
+        src: url("../../fonts/Roboto-Italic.ttf");
         font-style: italic;
     }
     @@font-face {
         font-family: "Nokia";
-        src: url("fonts/Roboto-BoldItalic.ttf");
+        src: url("../../fonts/Roboto-BoldItalic.ttf");
         font-weight: bold;
         font-style: italic;
     }
